sampler/chain/projects/EventBus/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/EventBus/EventBus/src/org/greenrobot/eventbus/EventBus.java:418: error: [NullAway] (INDEX= 8) (Covered) assigning @Nullable expression to @NonNull field
                    postingState.subscription = null;
                                              ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/EventBus/EventBus/src/org/greenrobot/eventbus/util/AsyncExecutor.java:38: error: [NullAway] (INDEX= 2) (Covered) initializer method does not guarantee @NonNull fields threadPool (line 34), failureEventType (line 35), eventBus (line 36) are initialized along all control-flow paths (remember to check for exceptions or early returns).
        private Builder() {
                ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/EventBus/EventBus/src/org/greenrobot/eventbus/PendingPost.java:48: error: [NullAway] (INDEX= 27) (Covered) assigning @Nullable expression to @NonNull field
        pendingPost.event = null;
                          ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/EventBus/EventBus/src/org/greenrobot/eventbus/util/AsyncExecutor.java:57: error: [NullAway] (INDEX= 3) (Covered) passing @Nullable parameter 'null' where @NonNull is required
            return buildForScope(null);
                                 ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/EventBus/EventBus/src/org/greenrobot/eventbus/PendingPost.java:28: error: [NullAway] (INDEX= 25) (Covered) initializer method does not guarantee @NonNull field next (line 26) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    private PendingPost(Object event, Subscription subscription) {
            ^

	(see http://t.uber.com/nullaway )
